--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,15 +5,15 @@
     </head>
     <body>
         <header>
-            <h1><a href="/">0N1 Bl4wG</a></h1>
+            <h1><a href="/">Django Girls Blog</a></h1>
         </header>
 
-        <article>
-            <time>published: 02.22.2024, 00:00</time>
-            <h2><a href="#">Post Zero</a></h2>
-            <p>
-                <a href="#">Post Zero</a>
-            </p>
-        </article>
+        {% for post in posts %}
+            <article>
+                <time>published: {{ post.published_date }}</time>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </article>
+        {% endfor %}
     </body>
 </html>
